# json_flow

./: .env_example  .gitignore  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
benchmarks/: performance_evaluation.ipynb
src/: config.py  logger.py  main.py  stack_stream_parser.py  stream_parser.py
tests/: test_stack_parser.py  test_stream_parser.py
